[package]
name = "rstring-builder"
version = "0.1.2"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "String builder type"
repository = "https://github.com/fewensa/rstring-builder"
license = "MIT"
keywords = ["string"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
readme = "README.md"
edition = "2018"

[dependencies]
